--- a/css/style.css
+++ b/css/style.css
@@ -2833,4 +2833,8 @@ a:hover {
 .website{
   color: #ed7207;
 }
+.overview{
+  display: flex;
+  flex-wrap: wrap;
+}
 /*# sourceMappingURL=style.css.map */
