--- a/css/style.css
+++ b/css/style.css
@@ -1456,7 +1456,7 @@ a:hover {
   position: absolute;
   left: 0;
   top: 0;
-  background: url(../images/lines.png);
+  background: url(../images/.webp);
   z-index: 1;
 }
 .page-header .inner {
@@ -1511,6 +1511,305 @@ a:hover {
   flex-wrap: nowrap;
 }
 
+/* PAGE HEADER Ikshana */
+.page-header-ikshana {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  background: #000;
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+.page-header-ikshana:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: url(../images/Ikshanabanner.webp);
+  z-index: 1;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+}
+.page-header-ikshana .inner {
+  width: 100%;
+  padding: 0 60px;
+  margin-top: 39px;
+  position: relative;
+  z-index: 3;
+}
+.page-header-ikshana .inner h2 {
+  font-size: 8em;
+  font-weight: 800;
+  line-height: 1;
+  color: #fff;
+  position: relative;
+  margin-top: 25%;
+}
+.page-header-ikshana .inner h2:before {
+  content: attr(data-text);
+  position: absolute;
+  left: -2px;
+  text-shadow: 1px 0 blue;
+  top: 0;
+  color: white;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-anim-2 3s infinite linear alternate-reverse;
+}
+.page-header-ikshana .inner h2:after {
+  content: attr(data-text);
+  position: absolute;
+  left: 2px;
+  text-shadow: -1px 0 red;
+  top: 0;
+  color: white;
+  overflow: hidden;
+  clip: rect(0, xw00px, 0, 0);
+  animation: noise-anim 2s infinite linear alternate-reverse;
+}
+.page-header-ikshana .inner p {
+  font-size: 26px;
+  line-height: 40px;
+  color: #fff;
+  font-weight: 300;
+  margin-bottom: 0;
+  padding-right: 40%;
+}
+
+.page-header-spacing {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+
+/* PAGE HEADER Baamee */
+/* PAGE HEADER Baamee */
+.page-header-baamee {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  background: #000;
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+
+.page-header-baamee:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: url(../images/Baameebannersmall.webp);
+  z-index: 1;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+}
+
+.page-header-baamee .inner {
+  width: 100%;
+  padding: 0 60px;
+  margin-top: 39px;
+  position: relative;
+  z-index: 3;
+}
+
+.page-header-baamee .inner h2 {
+  font-size: 8em;
+  font-weight: 800;
+  line-height: 1;
+  color: #fff;
+  position: relative;
+  margin-top: 25%;
+}
+
+.page-header-baamee .inner h2:before {
+  content: attr(data-text);
+  position: absolute;
+  left: -2px;
+  text-shadow: 1px 0 blue;
+  top: 0;
+  color: white;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-anim-2 3s infinite linear alternate-reverse;
+}
+
+.page-header-baamee .inner h2:after {
+  content: attr(data-text);
+  position: absolute;
+  left: 2px;
+  text-shadow: -1px 0 red;
+  top: 0;
+  color: white;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-anim 2s infinite linear alternate-reverse;
+}
+
+.page-header-baamee .inner p {
+  font-size: 26px;
+  line-height: 40px;
+  color: #fff;
+  font-weight: 300;
+  margin-bottom: 0;
+  padding-right: 40%;
+}
+
+.page-header-spacing {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+/* Responsive Design for Smaller Screens */
+
+/* For tablet and below (screens with width <= 768px) */
+@media (max-width: 768px) {
+  .page-header-baamee .inner h2 {
+    font-size: 5em; /* Adjust based on your design */
+  }
+
+  .page-header-baamee .inner p {
+    font-size: 22px; /* You can adjust this as well */
+  }
+}
+
+/* For mobile phones (screens with width <= 480px) */
+@media (max-width: 480px) {
+  .page-header-baamee .inner h2 {
+    font-size: 4em; /*just based on your design */
+    margin-top: 200px;
+  }
+
+  .page-header-baamee .inner p {
+    font-size: 10px; /* Adjust this as well */
+  }
+}
+
+
+/* PAGE HEADER Toyota */
+.page-header-toyota {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  background: #000;
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+.page-header-toyota:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: url(../images/toyotabanner.webp);
+  z-index: 1;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+}
+.page-header-toyota .inner {
+  width: 100%;
+  padding: 0 60px;
+  margin-top: 39px;
+  position: relative;
+  z-index: 3;
+}
+.page-header-toyota .inner h2 {
+  font-size: 8em;
+  font-weight: 800;
+  line-height: 1;
+  color: #fff;
+  position: relative;
+  margin-top: 25%;
+}
+.page-header-toyota .inner h2:before {
+  content: attr(data-text);
+  position: absolute;
+  left: -2px;
+  text-shadow: 1px 0 blue;
+  top: 0;
+  color: white;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-anim-2 3s infinite linear alternate-reverse;
+}
+.page-header-toyota .inner h2:after {
+  content: attr(data-text);
+  position: absolute;
+  left: 2px;
+  text-shadow: -1px 0 red;
+  top: 0;
+  color: white;
+  overflow: hidden;
+  clip: rect(0, xw00px, 0, 0);
+  animation: noise-anim 2s infinite linear alternate-reverse;
+}
+.page-header-toyota .inner p {
+  font-size: 26px;
+  line-height: 40px;
+  color: #fff;
+  font-weight: 300;
+  margin-bottom: 0;
+  padding-right: 40%;
+}
+
+.page-header-spacing {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+/* Responsive Design for Smaller Screens */
+
+/* For tablet and below (screens with width <= 768px) */
+@media (max-width: 768px) {
+  .page-header-toyota .inner h2 {
+    font-size: 5em; /* Adjust based on your design */
+  }
+
+  .page-header-toyota .inner p {
+    font-size: 22px; /* You can adjust this as well */
+  }
+}
+
+/* For mobile phones (screens with width <= 480px) */
+@media (max-width: 480px) {
+  .page-header-toyota .inner h2 {
+    font-size: 3em; /*just based on your design */
+    margin-top: 440px;
+  margin-left: 105px;
+  }
+
+  .page-header-toyota .inner p {
+    font-size: 10px; /* Adjust this as well */
+  }
+}
 /* VIDEO BG */
 .video-bg {
   width: 100%;
@@ -2933,6 +3232,7 @@ background-color: white;
 }
 .feat{
   text-align: left;
+  color: white
 }
 #projectile{
   /*=============== GOOGLE FONTS ===============*/
@@ -3062,16 +3362,7 @@ img {
   position: relative;
 }
 
-.section__title-1::after,
-.section__title-2::after {
-  content: "";
-  width: 40px;
-  height: 28px;
-  background-color:black;
-  position: absolute;
-  top: -4px;
-  right: -8px;
-}
+
 
 .section__title-2::after {
   top: initial;
@@ -3274,4 +3565,206 @@ img {
     right: 1.25rem;
   }
 }
+}
+#features1{
+  width: 100%;
+  h1, h2, h3, h4, h5, h6 {
+  }
+  section {
+      padding: 60px 0;
+      min-height: 100vh;
+      width: 100%;
+  }
+  a, a:hover, a:focus, a:active {
+      text-decoration: none;
+      outline: none;
+  }
+  ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+  }.bg-gray {
+      background-color: #f9f9f9;
+  }
+  
+  .site-heading h2 {
+    display: block;
+    font-weight: 700;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+  }
+  
+  .site-heading h2 span {
+    color: #ffaf5a;
+  }
+  
+  .site-heading h4 {
+    display: inline-block;
+    padding-bottom: 20px;
+    position: relative;
+    text-transform: capitalize;
+    z-index: 1;
+  }
+  
+  .site-heading h4::before {
+    background: #ffaf5a none repeat scroll 0 0;
+    bottom: 0;
+    content: "";
+    height: 2px;
+    left: 50%;
+    margin-left: -25px;
+    position: absolute;
+    width: 50px;
+  }
+  
+  .site-heading {
+    margin-bottom: 60px;
+    overflow: hidden;
+    margin-top: -5px;
+  }
+  
+  .info h4 {
+color: white;
+  }
+  .features-items,
+  .features-items .items-box {
+    overflow: hidden;
+  }
+  
+  .features-area .equal-height::after {
+    background: #e7e7e7 none repeat scroll 0 0;
+    content: "";
+    height: 100%;
+    position: absolute;
+    right: -1px;
+    top: 0;
+    width: 1px;
+  }
+  
+  .features-area.item-full .equal-height::before {
+    background: #e7e7e7 none repeat scroll 0 0;
+    content: "";
+    height: 1px;
+    position: absolute;
+    bottom: -1px;
+    right: 0;
+    width: 100%;
+  }
+  
+  .features-area .features-items .col-md-5, 
+  .features-area .features-items .col-md-7 {
+    display: table-cell;
+    float: none;
+    vertical-align: middle;
+  }
+  
+  .features-area .features-items.reversed .col-md-5, 
+  .features-area .features-items.reversed .col-md-7 {
+    display: inline-block;
+    float: left;
+  }
+  
+  .features-area .features-items.reversed .info-box {
+    float: right;
+  }
+  
+  .features-area .features-items .item {
+    padding: 15px 30px;
+  }
+  
+  .features-area.item-full .features-items .item {
+    padding: 30px;
+  }
+  
+  .features-area .features-items .item h4 {
+    position: relative;
+  }
+  
+  .features-area.bottom-small {
+    padding-bottom: 25px;
+  }
+  
+  .features-area.default-padding.bottom-none {
+    padding-bottom: 30px;
+  }
+  
+  .features-area .item .icon {
+    margin-bottom: 20px;
+  }
+  
+  .features-area .item .info {
+  }
+  
+  .features-area .item .icon i {
+    background: #ffffff none repeat scroll 0 0;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    -moz-box-shadow: 0 0 10px #cccccc;
+    -webkit-box-shadow: 0 0 10px #cccccc;
+    -o-box-shadow: 0 0 10px #cccccc;
+    box-shadow: 0 0 10px #cccccc;
+    color: #ffaf5a;
+    display: inline-block;
+    font-size: 30px;
+    height: 100px;
+    line-height: 100px;
+    position: relative;
+    text-align: center;
+    width: 100px;
+    z-index: 1;
+  }
+  
+  .features-area .features-items .items-box i {
+    background: transparent;
+  }
+  
+  .features-area .item .icon {
+    margin-bottom: 25px;
+  }
+  
+  .features-area .features-items.icon-solid i {
+    border-radius: inherit;
+    -moz-box-shadow: 0 0 10px #cccccc;
+    -webkit-box-shadow: 0 0 10px #cccccc;
+    -o-box-shadow: 0 0 10px #cccccc;
+    box-shadow: 0 0 10px #cccccc;
+    color: #ffaf5a;
+    display: inline-block;
+    font-size: 50px;
+    height: 80px;
+    line-height: 80px;
+    position: relative;
+    text-align: center;
+    width: 80px;
+  }
+  
+  
+  .features-area .item .info h4 {
+      font-weight: 600;
+      text-transform: capitalize;
+      font-size: 20px;
+  }
+  .features-area .item .info p {
+    margin: 0;
+  }
+  
+  .features-area .features-items.less-icon .items-box.inc-cell .item .info {
+    padding-left: 0;
+  }
+  
+  .features-area .features-items .items-box.inc-cell .item .info a {
+    color: #666666;
+    display: inline-block;
+    margin-top: 15px;
+    text-transform: uppercase;
+  }
+  
+  .features-area .features-items .items-box.inc-cell .item .info a:hover {
+    color: #ffaf5a;
+  }
+  
+}
+.brandservice{
+  
 }
